# rz-utility

./: LICENSE  README.md  all_build.sh  board_info.txt  build_atf.sh  build_board_id.sh  build_flash_writer.sh  build_u-boot.sh  common.sh  make_rz_uboot.sh  merge_ipl_file.sh  v2h_merge_ipl_file.sh  write_ipl.sh
binmake/: Makefile  binmake.c  platform_info.json
local-build-script/: README.md  board_info.txt  build_atf.sh  build_kernel.sh  build_uboot.sh  config.ini  main_build.sh  merge_ipl_file.sh  write_ipl.sh
local-build-scripts/: README.md  build_atf.sh  build_flash_writer.sh  build_kernel.sh  build_uboot.sh  common.sh  config.ini  main_build.sh
rzv2l_ipl_build_script/: README.md  build_atf.sh  build_flash_writer.sh  build_u-boot.sh  make_rz_ipl.sh  merge_ipl_file.sh  write_ipl.sh
tools/: README.md
tools/binmake/: CMakeLists.txt  Makefile  README.md  binmake.c  platform_info.json
tools/binmake/cjson/: README.md
universal-scripts/: README.md
universal-scripts/host/tools/: README.md  flash_images.json  universal_flash.py
universal-scripts/host/tools/bootloader-flasher/: Readme.md  bootloader_flash.py
universal-scripts/host/tools/bootloader_flasher/: Readme.md  bootloader_flash.py
universal-scripts/host/tools/config/: README.md  boards_flash_config.toml
universal-scripts/host/tools/sd-creator/: Readme.md  sd_flash.sh
universal-scripts/host/tools/sd_creator/: Readme.md  sd_flash.py
universal-scripts/host/tools/uload-bootloader/: Readme.md  uload_bootloader_flash.py
universal-scripts/host/tools/uload_bootloader/: Readme.md  (+1 more)
(+1 files in other folders)
